[package]
name = "workerns"
version = "0.1.0"
authors = ["Peter Cai <peter@typeblog.net>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[build]
target = "wasm32-unknown-unknown"

[dependencies]
cfg-if = "1.0"
console_error_panic_hook = { version = "0.1.6", optional = true }
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "ExtendableEvent",
    "Request",
    "Response",
    "ResponseInit"
]}