[package]
name = "workerns"
version = "0.1.0"
authors = ["Peter Cai <peter@typeblog.net>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[build]
target = "wasm32-unknown-unknown"

[dependencies]
async_static = "0.1"
base64 = "0.13"
bytes = "0.4"
cfg-if = "1.0"
console_error_panic_hook = { version = "0.1.6", optional = true }
domain-core = "0.4"
js-sys = "0.3"
# Required by async_static
once_cell = "1"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "ExtendableEvent",
    "Headers",
    "Request",
    "RequestInit",
    "Response",
    "ResponseInit",
    "Url",
    "UrlSearchParams"
]}